--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ nav {
   grid-template-columns: auto auto;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid;
 }
 
 nav ul {
@@ -40,4 +41,13 @@ nav ul {
 
 nav ul li {
   padding: .5rem 1rem;
+}
+
+.nav-link {
+  color: #000;
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  color: var(--orange);
 }
